k8s/swops-flask-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: swops-flask
  labels:
    name: swops-flask
    app: coding-challenge
spec:
  ports:
  - port: 80
    targetPort: 80
    name: swops-flask
  type: NodePort
