k8s/swops-flask-nodeport-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: swops-flask
  labels:
    name: swops-flask
spec:

  selector:
    app: swops-flask
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
