k8s/swops-minikube-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: swops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: swops-flask
          servicePort: 80
      - path: /kibana
        backend:
          serviceName: kibana
          servicePort: 80
